# hyrcania

./: .gitignore  Dockerfile  PORTABLE_SETUP.md  README.md  backup.sh  docker-compose.yml  pyproject.toml  run.sh  visu.ipynb
.ipynb_checkpoints/: data_exp-checkpoint.ipynb
archive/: data_exp.ipynb
data/extracted/Aging Step 0/Absorption/: 20210512_1015_AS0_X0Q1S0K2W2V1.csv  20210512_1408_AS0_H2N0T1I0G1A0.csv  20210513_0907_AS0_E2M0D2F0U0P2.csv  20210513_1105_AS0_R2O0L2J2C2B2.csv
data/extracted/Aging Step 0/Fluorescence/: 20210512_0752_AS0_Q1K2V1U0.csv  20210512_0915_AS0_X0S0V2W2.csv  20210512_1045_AS0_F0P2A0G1.csv  20210512_1208_AS0_I0T1N0H2.csv  20210512_1335_AS0_X1K0Q0W0.csv  20210512_1530_AS0_T0W1U1V0.csv  20210513_0735_AS0_D2E2M0X2.csv  20210513_0905_AS0_B2C2J2L2.csv  20210513_1030_AS0_O0R2T2R1.csv  20210513_1225_AS0_N1U2Q2R0.csv  20210513_1355_AS0_L0P0O1L1.csv  20210513_1518_AS0_O2M1M2S2.csv  20210514_0742_AS0_A1A2B0B1.csv  20210514_0909_AS0_C0C1D0D1.csv  20210514_1041_AS0_E0E1F1F2.csv  20210514_1224_AS0_G0G2H0H1.csv  20210514_1401_AS0_I1I2J0J1.csv  20210514_1528_AS0_K1N2P1S1.csv
data/extracted/Aging Step 1/Absorption/: 20210519_0940_AS1_W2C2S1A1V2U2.csv  20210519_1354_AS1_E1G2T0X0D0F2.csv  20210520_0929_AS1_P1I0N0K0Q0R0.csv  20210520_1356_AS1_L1B2M0H0J1O2.csv
data/extracted/Aging Step 1/Fluorescence/: 20210519_0750_AS1_C2A1V2X0.csv  20210519_0915_AS1_W2T0U2S1.csv  20210519_1037_AS1_D0E1F2G2.csv  20210519_1200_AS1_V1X2X1U0.csv  20210519_1324_AS1_U1W1W0V0.csv  20210519_1448_AS1_T1R0T2S2.csv  (+12 more)
src/hyrcania/: test_refactored_architecture.py
(+177 files in other folders)
