[project]
name = "hyrcania"
version = "0.1.0"
description = "Project Hyrcania: Automated Olive Oil Quality Control. My goal is to develop a machine learning system that classifies the quality and age of extra virgin olive oil using fluorescence and UV absorption spectroscopy."
authors = [
    {name = "MBoulahtouf",email = "marouan.boulahtouf@protonmail.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "ramanspy (>=0.2.10,<0.3.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "plotly (>=6.1.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "hyrcania", from = "src"}]


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
lab = "^8.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
